Fixing problem with rendering on small screen sizes.

--- a/public/css/fitspector.css
+++ b/public/css/fitspector.css
@@ -352,7 +352,6 @@ svg {
     shape-rendering: crispEdges;
 }
 .container {
-    min-width: 950px;
     overflow: auto;
 }
 .sport-icon {
